src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

:root {
  background-color: #DFDCD8;
  font-family: kanit;
}

/* Format for all pages -------------------------------------------------------------*/

.rockContainer {
  margin: 0 auto;
  max-width: 85rem;
}

.container {
  margin: 0 auto;
  max-width: 72rem;
}

/* Nav Bar --------------------------------------------------------------------------*/

.NavBar {
  /* margin: 0 177px; */
  padding: 20px 50px;
  z-index: auto;
}

ul {
  list-style: none;
  color: rgb(0, 0, 0);
  display: flex;
  flex-wrap: wrap;
}

ul a {
  padding: 20px 30px 10px;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  transition: .3s;
}
ul a:hover {
  color: #fff;
  transition: .6s;
}
ul a:before {
  content: "";
  position: absolute;
  inset: calc(100% - 3px) 0 0 0;
  background: #949978;
  bottom: 0;
  scale: 0 1;
  transition: .3s, translate 0s .3s;
}
ul:hover a:before {
  scale: 1;
}
ul a:hover:before {
  translate: 0;
  transition: .3s;
}
ul:hover a:has(~ a:hover):before {
  translate: 100% 0;
  transition: .2s .2s,scale 0s .4s;
}
ul:hover a:hover ~ a:before {
  translate: -100% 0;
  transition: .2s .2s,scale 0s .4s;
}

/* Home Page --------------------------------------------------------------------------*/

/* Background */

.rock1 {
  object-position: center;
  width: 955px;
  height: 720px;
  z-index: -2;
  position: absolute;
  margin: 550px 0;
}

.rock2{
  object-position: center;
  width: 465px;
  height: 422px;
  z-index: -1;
  position: absolute;
  margin: 300px 100px;
}

.rock3 {
  object-position: center; 
  width: 300px;
  height: 255px;
  z-index: -1;
  position: absolute;
  margin: 1080px 775px;
}

/* Home Content */

.whyUs {
  display: flex;
  /* width: 921.6px; */
  align-items: center;
  background-color: rgba(84, 48, 25, 25%)
}

/* Classes -------------------------------------------------------------------------- */

.classesRock {
  display: flex;
  z-index: -1;
  width: 1260px;
  height: 1240px;
  position: absolute;
  margin-top: 18rem;
}

.cardContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem 11.2rem;
  justify-content: center;
  margin: 20px 0;
}

.card-deck {
  margin: 0 0 7rem;
  position: relative;
  max-width: 100%;
  display: flex;
  flex-flow: row wrap;
  /* transition: all .2s ease-in-out; */
}

.card:hover .card-inner{
  transform: rotateY(-180deg)
}

.card {
  width: 398px;
  height: 450px;
  /* position: relative; */
  margin: 0 2rem;
  perspective: 1000px;
}

.card-inner {
  position: relative;
  height: 100%;
  width: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.imgWrap {
  height: 100%;
  width: 100%;

  /* transform: scale(1); */
  /* transition: all .5 ease; */
  /* filter: grayscale(50%); */
  /* position: absolute; */
}

.card-front, .card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.card-back {
  color: #fff;
  background-color: #949978;
  transform: rotateY(180deg);
}

/* .imgWrap:hover {
  filter: grayscale(0%);
} */

.book {
  background-color: white;
  position: absolute;
  text-transform: uppercase;
  padding: .5rem 1rem;
  bottom: 5%;
  left: 5%;
  cursor: pointer;
}

.book :hover {
  transition-delay: 250ms;
  transition-property: all ease-in-out;
}
/* come back to this */

.adjectives {
  display: flex;
  justify-content: space-between;
  font-size: 25px;
  opacity: .35;
  padding-top: 0.5rem;
}

.classType {
  font-size: 50px;
}

/* Reviews ------------------------------------------------------------------ */

.reviewsRock {
  display: flex;
  z-index: -1;
  width: 1160px;
  height: 840px;
  position: absolute;
  margin: 5rem 0 0 12rem;
}

.portals {
  display: flex;
  align-content: center;
  cursor: pointer;
}

.portals .pButton{
  display: flex;
  flex-wrap: wrap;
  margin: 0 3rem;
  background-color: #3E5C47;
  border-radius: 400px;
  transition: all .4s ease-in-out;
  cursor: pointer;
  align-content: center;
  justify-content: center;
  min-width: 258px;
  min-height: 320px;
}

.portals .pButton:hover {
  transform: translateY(-3rem);
  opacity: 75%;
  color: white;
}

.reviews {
  display: flex;
  background-color: rgba(148, 153, 120, 20%);
  padding: 2rem;
  margin: 15rem 5rem 3rem;
  position: relative;
}

.review-Logo {
  background-color: #949978;
  height: 10rem;
  max-width: 5rem;
  border-start-end-radius: 45%;
}

.social-icon {
  background-color: #D4CFC9;
  border-radius: 50%;
}

